fullname has been added to author table
